Added plugins. Fix

--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -30,10 +30,11 @@ jenkins:
                 user: "jenkins"
             instanceCapStr: "10"
 
-plugins:
-  - name: "Cucumber reports"
-  - name: "Configuration as Code"
-  - name: "Configuration as Code Support"
+unclassified:
+  plugin:
+      - name: "Cucumber reports"
+      - name: "Configuration as Code"
+      - name: "Configuration as Code Support"
 
 tool:
   git:
